[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "yogo"
version = "0.2.0"
description = "you only glance once?"
authors = ["Axel Jacobsen"]
readme = "README.md"
keywords = ["object detection", "YOLO", "deep learning", "PyTorch"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = ">=1.13.1"
torchvision = ">=0.14.1"
torchmetrics = { version = ">=0.11.4", extras = ["detection"] }
onnx = ">=1.14.0"
onnxruntime = ">=1.14.1"
onnx-simplifier = ">=0.4.17"
openvino-dev = "2023.0.2"
"ruamel.yaml" = "0.17.21"
matplotlib = "^3.4.2"
MonkeyType = "23.3.0"
tqdm = "^4.61.2"
wandb = ">=0.14.2"
zarr = ">=2.14"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-xdist = "^2.5.0"
ruff = "^0.0.292"
black = "^23.9.1"

[tool.poetry.scripts]
yogo = "yogo.__main__:main"

[tool.ruff]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts="-n 4"
