[tool.poetry]
name = "yogo"
version = "0.2.0"
description = "you only glance once?"
authors = ["Axel Jacobsen"]
readme = "README.md"
keywords = ["object detection", "YOLO", "deep learning", "PyTorch"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
zarr = ">=2.14"
torch = ">=1.13.1"
torchmetrics = { version = ">=0.11.4", extras = ["detection"] }
torchvision = ">=0.14.1"
"ruamel.yaml" = "0.17.21"
tqdm = "^4.61.2"
wandb = ">=0.14.2"
matplotlib = "^3.4.2"
MonkeyType = "23.3.0"
onnx = ">=1.14.0"
onnxruntime = ">=1.14.1"
onnx-simplifier = ">=0.4.17"
openvino-dev = "2023.0.2"
# TODO Try faster-coco-eval backend again. Would be very nice to be faster, but
# this was breaking last time we tried it.
# https://lightning.ai/docs/torchmetrics/stable/detection/mean_average_precision.html
# faster-coco-eval = ">=1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
ruff = "^0.0.292"
black = ">=23.9.1"

[tool.poetry.scripts]
yogo = "yogo.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
