[metadata]
name = yogo
version = 0.1.0
description = you only glance once?
long_description = file: README.md
author = Axel Jacobsen
requires-python = >=3.7
keywords = [object detection, YOLO, deep learning, PyTorch]

[project.optional-dependencies]
onnx = [onnx]
simd = [Pillow-SIMD]

[options]
package_dir =
  =src
packages=find:
install_requires =
  PyYAML
  torch
  torchvision
  tqdm
  wandb
  matplotlib

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  yogo = yogo.__main__:main
