[metadata]
name = yogo
version = 0.1.0
description = you only glance once?
long_description = file: README.md
author = Axel Jacobsen
requires-python = >=3.7
keywords = [object detection, YOLO, deep learning, PyTorch]

[options]
package_dir =
  =src
packages=find:
install_requires =
  PyYAML
  torchmetrics
  tqdm
  wandb
  matplotlib

[options.extras_require]
onnx =
  onnx
  onnxruntime
  onnx-simplifier
label =
  label-studio-converter @ git+https://github.com/Axel-Jacobsen/label-studio-converter.git@master

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  yogo = yogo.__main__:main
